# Notepush

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
cmake/: FindGit2.cmake  FindGtest.cmake
src/: CMakeLists.txt  main.cpp  main.h
src/notepush/: CMakeLists.txt  git_pull.sh  notepush.cpp  notepush.h
test/: CMakeLists.txt  test_notepush.cpp
